update layer api test

--- a/fmt.html
+++ b/fmt.html
@@ -1,7 +1,7 @@
 <style>
   html {
     width: 456px;
-    height: 345px;
+    height: 250px;
   }
   body {
     margin: 0;
@@ -14,13 +14,18 @@
   }
   #wrapper {
     padding: 10px 20px;
-    background-color: rgba(35, 34, 38, 1);
+    background-color: rgba(35, 34, 38, 0.75);
     box-sizing: border-box;
+    height: 250px;
   }
   #wrapper h1 {
     font-weight: bold;
     color: #fff;
     font-size: 20px;
+  }
+
+  .hidden {
+    display: none;
   }
 
   .extendedh body,
@@ -45,7 +50,7 @@
 
   input,
   input:focus {
-    border: solid 1px #4A4A4A;
+    border: solid 1px #4a4a4a;
     outline: none;
     background: none;
     color: rgb(180, 180, 180);
@@ -59,16 +64,30 @@
     border: none;
     background: rgba(0, 0, 0, 0.5);
     color: rgb(180, 180, 180);
+    padding: 5px 10px;
+    cursor: pointer;
+  }
+  button:hover {
+    color: #fff;
   }
 </style>
 <div id="wrapper">
-  <h1>Scene API</h1>
-  <p>
-    <input id="bg-color" placeholder="Background colour" />
-    <input id="scene-mode" placeholder="scene3d" />
-    <button id="skybox">Skybox</button>
-    <button id="remove">Remove</button>
-  </p>
+  <div class="api-field hidden">
+    <h1>Scene API</h1>
+    <p>
+      <input id="bg-color" placeholder="Background colour" />
+      <input id="scene-mode" placeholder="scene3d" />
+      <button id="skybox">Skybox</button>
+      <button id="remove">Remove</button>
+    </p>
+  </div>
+
+  <div class="api-field">
+    <h1>Layer API</h1>
+    <p>
+      <button id="add-marker">Add Marker</button>
+    </p>
+  </div>
 </div>
 <script>
   let skyboxEnabled, bgcolor, sceneMode;
@@ -101,5 +120,9 @@
     } else {
       e.currentTarget.textContent = "Skybox Disabled";
     }
+  });
+
+  document.getElementById("add-marker").addEventListener("click", (e) => {
+    parent.postMessage({ actionField: "layer", action: "addMarker" }, "*");
   });
 </script>
